--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "lib": ["es6", "dom", "es2016"],
     "target": "es2016",
     "module": "es6",
-    "outDir": "../doc/js",
+    "outDir": "../js",
     "rootDir": "src/ts"
   }
 }
